# multi-agent-workflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  plugin.json  pyproject.toml
.claude/: settings.local.json.template
.claude-plugin/: marketplace.json
.claude/agents/: code-reviewer.json  code-reviewer.md  implement-developer.json  implement-developer.md  plan-architect.json  plan-architect.md  research-analyst.json  research-analyst.md
.claude/commands/: multi-implement.md  multi-plan.md  multi-research.md  multi-review.md  multi-tasks.md  multi-verify.md  orchestrate.md  status.md
.claude/logs/: events.jsonl
.plugin-dev/: cache-map.json  release-progress.json  watch.config.json
agents/: code-reviewer.md  plan-architect.md  research-analyst.md
cli/: __init__.py  __main__.py  main.py
cli/config/: __init__.py  actions.py  models.py  perspectives.py  schema.py  stages.py
cli/io/: __init__.py  logging.py  memory.py  state.py
cli/orchestrator/: __init__.py  agent_caller.py  errors.py  rollback.py  stage_runner.py  workflow.py
cli/plugin/: __init__.py  __main__.py  cache.py  dev.py  exceptions.py  release.py  version.py
cli/prompts/: __init__.py  base.py  implement.py  plan.py  research.py  review.py  tasks.py  verify.py
cli/validators/: __init__.py  dag.py  perspective.py  quality_gate.py
docs/troubleshooting/: E-AGT-001.md  E-AGT-002.md  E-GIT-001.md  E-MEM-001.md  E-RED-001.md  E-USR-001.md  E-WKF-001.md  E-WKF-002.md  README.md
scripts/: create-skill.sh  get-config.sh  list-perspectives.sh  validate-skills.sh
scripts/git_lib/: __init__.py  commit.py  config.py  context.py  exceptions.py  executor.py  facade.py  operations.py
templates/: settings.hooks.json
tests/: __init__.py
(+322 files in other folders)
